Fix spacing on topic grid

--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -64,6 +64,7 @@ nav.menu-bar a:hover {
     flex-wrap: wrap;
     gap: 0.5rem;
     font-family: monospace;
+    justify-content: space-between;
 }
 .topic-grid > .topic-link {
     flex-basis: 30%;
@@ -73,12 +74,11 @@ nav.menu-bar a:hover {
     text-decoration: underline;
 }
 .topic-grid > .topic-link p {
-    margin-bottom: 0rem;
+    margin-bottom: 0.5rem;
 }
 .topic-grid > .topic-link img:hover {
     outline: 1px solid black;
 }
-
 
 /* Articles */
 .article {
